refactor,fix: 파일중복 제거, entity 매핑 오류 해결, 기존 Group -> ClassLecture로 이름 변경.